--- a/lofi_pototype/index.html
+++ b/lofi_pototype/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>小红书风格主页 · Demo</title>
+  <title>NutriMate · Demo</title>
   <link rel="stylesheet" href="base.css" />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%23FF2442'/%3E%3Cpath d='M18 21h28v22a3 3 0 0 1-3 3H21a3 3 0 0 1-3-3V21z' fill='%23fff'/%3E%3C/svg%3E" />
 </head>
@@ -12,8 +12,8 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="brand">
-        <span class="brand-logo">RED</span>
-        <span class="brand-name">小红书</span>
+        <span class="brand-logo">NM</span>
+        <span class="brand-name">NutriMate</span>
         <button class="sidebar-toggle" aria-label="折叠侧栏" title="折叠侧栏"></button>
       </div>
       <nav class="nav">
@@ -37,8 +37,8 @@
         <div class="user">
           <img class="avatar" src="https://api.dicebear.com/7.x/miniavs/svg?seed=R" alt="avatar" />
           <div class="meta">
-            <strong>REDer</strong>
-            <span>创作号 · Lv3</span>
+            <strong>NMer</strong>
+            <span>Writer · Lv3</span>
           </div>
         </div>
       </div>
@@ -188,7 +188,7 @@
       <button class="fab" title="快速发布">＋</button>
 
       <footer class="footer">
-        <span>© 2025 RED Demo</span>
+        <span>© 2025 NutriMate Demo</span>
         <a href="#" class="link">社区规范</a>
       </footer>
     </main>
