update mission page

--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -16,7 +16,7 @@
             <div class="date">Today: 18/10 Fri</div>
         </div>
         <div class="top-right">
-            <h1 class="recipe-title">Puzzle Progress</h1>
+            <h1 class="recipe-title">Team Cooking: Dinner Together</h1>
             <button class="start-btn">Reset</button>
         </div>
     </div>
@@ -28,26 +28,27 @@
             <h1 class="recipe-title">Salmon Veggie Sushi Bowl</h1>
             <h2 class="mission-title">Steps</h2>
             <ul class="mission-list">
-                <li class="mission-item" data-id="1"><div class="circle"></div><span>完成早餐任务</span></li>
-                <li class="mission-item" data-id="2"><div class="circle"></div><span>午餐食谱学习</span></li>
-                <li class="mission-item" data-id="3"><div class="circle"></div><span>晚餐制作挑战</span></li>
-                <li class="mission-item" data-id="4"><div class="circle"></div><span>食材购买清单</span></li>
-                <li class="mission-item" data-id="5"><div class="circle"></div><span>分享今日菜品</span></li>
-                <li class="mission-item" data-id="6"><div class="circle"></div><span>参加社区活动</span></li>
-                <li class="mission-item" data-id="7"><div class="circle"></div><span>健康饮食记录</span></li>
-                <li class="mission-item" data-id="8"><div class="circle"></div><span>完成营养问答</span></li>
-                <li class="mission-item" data-id="9"><div class="circle"></div><span>查看明日计划</span></li>
+                <li class="mission-item" data-id="1"><div class="circle"></div><span>Prepare Ingredients</span></li>
+                <li class="mission-item" data-id="2"><div class="circle"></div><span>Cook the Sushi Rice</span></li>
+                <li class="mission-item" data-id="3"><div class="circle"></div><span>Season the Rice</span></li>
+                <li class="mission-item" data-id="4"><div class="circle"></div><span>Slice the Salmon</span></li>
+                <li class="mission-item" data-id="5"><div class="circle"></div><span>Prepare Sauce</span></li>
+                <li class="mission-item" data-id="6"><div class="circle"></div><span>Arrange the Base</span></li>
+                <li class="mission-item" data-id="7"><div class="circle"></div><span>Add Vegetables</span></li>
+                <li class="mission-item" data-id="8"><div class="circle"></div><span>Add Salmon & Toppings</span></li>
+                <li class="mission-item" data-id="9"><div class="circle"></div><span>Drizzle Sauce & Serve</span></li>
             </ul>
         </div>
 
         <!-- 右侧拼图区 -->
-        <div class="progress-wrap">
-            <div class="progress-bar">
+        <div class="mission-content">
+
+            <div class="progress-wrap">
               <div class="progress-bar">
                 <div class="progress-fill" id="progress"></div>
               </div>
               <span class="progress-text" id="progressText">0/9 (0%)</span>
-        </div>
+            </div>
 
             <div class="puzzle-grid">
                 <!-- 3x3 拼图 -->
@@ -62,6 +63,7 @@
                 <div class="puzzle-piece" data-id="9"></div>
             </div>
         </div>
+
     </div>
 
     <script src="js/mission.js"></script>
