--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -42,26 +42,34 @@
 
         <!-- 右侧拼图区 -->
         <div class="mission-content">
-
-            <div class="progress-wrap">
+          <div class="progress-wrap">
               <div class="progress-bar">
                 <div class="progress-fill" id="progress"></div>
               </div>
               <span class="progress-text" id="progressText">0/9 (0%)</span>
-            </div>
+          </div>
 
-            <div class="puzzle-grid">
+          <div class="right-section">
+              <div class="puzzle-grid">
                 <!-- 3x3 拼图 -->
-                <div class="puzzle-piece" data-id="1"></div>
-                <div class="puzzle-piece" data-id="2"></div>
-                <div class="puzzle-piece" data-id="3"></div>
-                <div class="puzzle-piece" data-id="4"></div>
-                <div class="puzzle-piece" data-id="5"></div>
-                <div class="puzzle-piece" data-id="6"></div>
-                <div class="puzzle-piece" data-id="7"></div>
-                <div class="puzzle-piece" data-id="8"></div>
-                <div class="puzzle-piece" data-id="9"></div>
-            </div>
+                  <div class="puzzle-piece" data-id="1"></div>
+                  <div class="puzzle-piece" data-id="2"></div>
+                  <div class="puzzle-piece" data-id="3"></div>
+                  <div class="puzzle-piece" data-id="4"></div>
+                  <div class="puzzle-piece" data-id="5"></div>
+                  <div class="puzzle-piece" data-id="6"></div>
+                  <div class="puzzle-piece" data-id="7"></div>
+                  <div class="puzzle-piece" data-id="8"></div>
+                  <div class="puzzle-piece" data-id="9"></div>
+              </div>
+
+              <div class="avatar-column">
+                  <img src="../PromotionalMaterial/chef1.png" alt="Chef1" class="avatar">
+                  <img src="../PromotionalMaterial/chef2.png" alt="Chef2" class="avatar">
+                  <img src="../PromotionalMaterial/chef3.png" alt="Chef3" class="avatar">
+                  <img src="../PromotionalMaterial/chef4.png" alt="Chef4" class="avatar">
+              </div>
+          </div>
         </div>
 
     </div>
