--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -63,6 +63,26 @@
                   <div class="puzzle-piece" data-id="9"></div>
               </div>
 
+              <div class="info-panel">
+                <h3 class="info-title">Ingredients</h3>
+
+                <ul class="ing-list">
+                    <li><span class="dot"></span>Sushi rice · 2 cups (cooked)</li>
+                    <li><span class="dot"></span>Salmon (sashimi-grade) · 200 g</li>
+                    <li><span class="dot"></span>Avocado · 1</li>
+                    <li><span class="dot"></span>Cucumber · 1/2</li>
+                    <li><span class="dot"></span>Carrot · 1</li>
+                    <li><span class="dot"></span>Edamame · 1 cup</li>
+                    <li><span class="dot"></span>Seaweed salad · 1/2 cup</li>
+                    <li><span class="dot"></span>Sesame seeds · 1 tbsp</li>
+                    <li><span class="dot"></span>Rice vinegar mix (vinegar+sugar+salt)</li>
+                </ul>
+
+                <div class="note">
+                    Tip: Keep salmon chilled. Gently fold sushi vinegar into warm rice.
+                </div>
+              </div>
+
               <div class="avatar-column">
                   <img src="../PromotionalMaterial/chef1.png" alt="Chef1" class="avatar">
                   <img src="../PromotionalMaterial/chef2.png" alt="Chef2" class="avatar">
