--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -92,6 +92,17 @@
           </div>
         </div>
 
+        <div id="completeModal" class="modal-backdrop" aria-hidden="true">
+          <div class="modal" role="dialog" aria-modal="true" aria-labelledby="completeTitle">
+            <h2 id="completeTitle">🎉 Completed!</h2>
+            <p>All 9 steps for <strong>Salmon Veggie Sushi Bowl</strong> are done.</p>
+            <div class="modal-actions">
+                <button id="modalClose" class="btn btn-primary">Great!</button>
+                <button id="modalReset" class="btn btn-secondary">Reset</button>
+            </div>
+          </div>
+        </div>
+
     </div>
 
     <script src="js/mission.js"></script>
