--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -84,10 +84,10 @@
               </div>
 
               <div class="avatar-column">
-                  <img src="../PromotionalMaterial/chef1.png" alt="Chef1" class="avatar">
-                  <img src="../PromotionalMaterial/chef2.png" alt="Chef2" class="avatar">
-                  <img src="../PromotionalMaterial/chef3.png" alt="Chef3" class="avatar">
-                  <img src="../PromotionalMaterial/chef4.png" alt="Chef4" class="avatar">
+                  <img src="PromotionalMaterial/Chef1.png" alt="Chef1" class="avatar">
+                  <img src="PromotionalMaterial/chef2.png" alt="Chef2" class="avatar">
+                  <img src="PromotionalMaterial/chef3.png" alt="Chef3" class="avatar">
+                  <img src="PromotionalMaterial/chef4.png" alt="Chef4" class="avatar">
               </div>
           </div>
         </div>
