--- a/Design Prototype/mission.html
+++ b/Design Prototype/mission.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="stylesheet" href="css/mission.css">
+    <link rel="icon" type="image/png" href="images/111.png" />
 </head>
 <body>
     <!-- 已有 header -->
@@ -100,7 +101,7 @@
             </div>
 
           <div class="modal-body">
-            <img src="../PromotionalMaterial/celebration.png" alt="Happy Student Illustration" class="celebration-img" id="draggableImage">
+            <img src="PromotionalMaterial/celebration.png" alt="Happy Student Illustration" class="celebration-img" id="draggableImage">
             <p class="celebration-text">
               Do you want to print illustrations?<br>
               <span>Drag the illustration to print.</span>
