--- a/Design Prototype/index.html
+++ b/Design Prototype/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>互动时间表与菜单</title>
+    <title>NutriMate - Homepage</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/homepage.css">
+    <link rel="icon" type="image/png" href="images/111.png" />
 </head>
 <body>
     <div class="top-bar">
