Add team info section to intro website

--- a/intro website/index.html
+++ b/intro website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/component.css">
 </head>
+
 <body>
     <header class="site-header">
         <div class="brand">
@@ -207,24 +209,26 @@
             <div class="contact-wrapper">
                 <div class="contact-info">
                     <h2>About Team LateBu</h2>
-                    <p>We are a multidisciplinary group in DECO3500 exploring how hybrid social experiences can support healthier everyday lives. NutriMate is our studio project focused on transforming dormitory kitchens into spaces for cross-cultural connection.</p>
+                    <p>We are Team LateBu, a multidisciplinary group in DECO3500 exploring how hybrid social experiences can support healthier everyday lives. Our studio project, <strong>NutriMate</strong>, focuses on transforming dormitory kitchens into spaces that foster cross-cultural connection and well-being. Each member contributes unique expertise across research, design, and evaluation to bring this vision to life.</p>
 
                     <h3 class="team-subheading">Who we are</h3>
                     <ul class="team-members">
-                        <li><strong>[Name Placeholder]</strong> · UX Researcher — leads interviews, field studies, and insight synthesis.</li>
-                        <li><strong>[Name Placeholder]</strong> · Service Designer — maps journeys and defines cross-channel touchpoints.</li>
-                        <li><strong>[Name Placeholder]</strong> · Interaction Designer — prototypes interfaces and motion for lobby/kitchen displays.</li>
-                        <li><strong>[Name Placeholder]</strong> · Visual Storyteller — crafts branding, narrative assets, and promotional media.</li>
+                        <li><strong>Yinhan Liu</strong> · UX Researcher &amp; Interface Designer — conducted user research and interviews, synthesized key insights, and led the design of the <em>Reservation Interface</em> in the prototype; also participated in prototype evaluation and user testing.</li>
+                        <li><strong>Yanjie Bu</strong> · Service Designer &amp; Visual Designer — carried out user research and interviews, investigated healthy food criteria to support the project concept, designed the <em>Cooking Process</em> and illustration pages, and contributed to prototype testing.</li>
+                        <li><strong>Yuzhe Wang</strong> · Research Analyst &amp; Evaluation Designer — explored healthy food frameworks and related academic sources, conducted user interviews, designed the prototype evaluation plan and <em>SUS chart</em>, and analyzed testing data to refine the design.</li>
+                        <li><strong>Hanqi Liu</strong> · Interaction Designer &amp; Project Documenter — facilitated user interviews and insight analysis, contributed to ideation and concept development, maintained the project wiki logs, and will continue to support prototype testing and iteration.</li>
+                        <li><strong>Shizhuo Sun</strong> · UX Researcher &amp; Prototype Developer — organized and analyzed interview data to identify user pain points, co-created the low-fidelity <em>homepage prototype</em>, and led prototype testing and data analysis to guide future design improvements.</li>
                     </ul>
 
                     <h3 class="team-subheading">What we focus on</h3>
                     <ul class="team-highlights">
-                        <li><strong>Research &amp; Insights:</strong> in-depth interviews, field observation, and iterative testing with dorm residents.</li>
-                        <li><strong>Product &amp; Interaction:</strong> spatial experience design, hybrid physical-digital touchpoints, and AI-assisted guidance.</li>
-                        <li><strong>Visual &amp; Narrative:</strong> brand storytelling, promotional materials, and community engagement strategy.</li>
+                        <li><strong>Research &amp; Insights:</strong> extensive user interviews, healthy eating research, and iterative evaluation to uncover needs and guide design directions.</li>
+                        <li><strong>Product &amp; Interaction:</strong> development of reservation and cooking interfaces, low-fidelity prototyping, and structured usability testing for hybrid experiences.</li>
+                        <li><strong>Visual &amp; Narrative:</strong> cohesive storytelling through illustrations, interface design, and documentation to communicate NutriMate’s community-centered vision.</li>
                     </ul>
 
                     <p class="team-note">Want to collaborate or learn more? Reach us via the DECO3500 Slack workspace or drop a line at <a href="mailto:nutrimate.team@example.com">nutrimate.team@example.com</a>.</p>
+
                 </div>
             </div>
         </section>
@@ -238,4 +242,5 @@
 
     <script src="js/main.js" defer></script>
 </body>
+
 </html>
