change intro website links

--- a/intro website/index.html
+++ b/intro website/index.html
@@ -280,7 +280,7 @@
             </p>
             <a
               class="prototype-link"
-              href="../Design Prototype/index.html"
+              href="https://3500prototye.netlify.app/"
               target="_blank"
               rel="noopener"
               >Open Lobby Prototype</a
@@ -294,7 +294,7 @@
             </p>
             <a
               class="prototype-link"
-              href="../Design Prototype/mission.html"
+              href="https://3500prototye.netlify.app/mission.html"
               target="_blank"
               rel="noopener"
               >Open Kitchen Prototype</a
@@ -308,7 +308,7 @@
             </p>
             <a
               class="prototype-link"
-              href="https://github.com/Richard-WYZ/DECO3500_DesignProject_Team_LateBu/blob/main/Iteration2/prototype.md"
+              href="https://github.com/Richard-WYZ/DECO3500_DesignProject_Team_LateBu/wiki/Prototype"
               target="_blank"
               rel="noopener"
               >Open Insight Summary</a
